src/objects/MN_Corp_Id_Request__c.object
<CustomObject>
    <fields>
        <fullName>Corp_Id__c</fullName>
        <label>Corp Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_GID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer GID</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>MN Corp Id Requests</relationshipLabel>
        <relationshipName>MN_Corp_Id_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_OID__c</fullName>
        <label>Customer OID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <description>DUNS Number for the entity</description>
        <inlineHelpText>DUNS Number for the entity</inlineHelpText>
        <label>DUNS</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCM_Account_Name__c</fullName>
        <formula>Customer_GID__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GCM Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCM_Account_Short_Name__c</fullName>
        <label>GCM Account Short Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCM_City__c</fullName>
        <label>GCM City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCM_Country__c</fullName>
        <label>GCM Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abkhazia</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Akrotiri And Dhekelia</fullName>
                </value>
                <value>
                    <fullName>Åland</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GCM_Industry_Segment__c</fullName>
        <description>Industry Segment</description>
        <inlineHelpText>Industry Segment</inlineHelpText>
        <label>GCM Industry Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA - Automotive</fullName>
                </value>
                <value>
                    <fullName>BB - C&amp;I</fullName>
                </value>
                <value>
                    <fullName>CC - Computing</fullName>
                </value>
                <value>
                    <fullName>DD - Distribution</fullName>
                </value>
                <value>
                    <fullName>EE - EMS</fullName>
                </value>
                <value>
                    <fullName>FF - Infrastructure</fullName>
                </value>
                <value>
                    <fullName>GG - Mobile</fullName>
                </value>
                <value>
                    <fullName>HH - Payment​</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GCM_Legal_Name__c</fullName>
        <description>Legal Name of the Customer</description>
        <inlineHelpText>Legal Name of the Customer</inlineHelpText>
        <label>GCM Legal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCM_Role__c</fullName>
        <label>GCM Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>IDH</fullName>
                </value>
                <value>
                    <fullName>VAR</fullName>
                </value>
                <value>
                    <fullName>ODM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GCM_State_Province__c</fullName>
        <description>Provide State or Province</description>
        <inlineHelpText>Provide State or Province</inlineHelpText>
        <label>GCM State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>GCM_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aceh</fullName>
                </value>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Andaman And Nicobar Islands</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>An Giang</fullName>
                </value>
                <value>
                    <fullName>Anhui Province</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Arunachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>Assam</fullName>
                </value>
                <value>
                    <fullName>Bac Giang</fullName>
                </value>
                <value>
                    <fullName>Bac Kan</fullName>
                </value>
                <value>
                    <fullName>Bac Lieu</fullName>
                </value>
                <value>
                    <fullName>Bac Ninh</fullName>
                </value>
                <value>
                    <fullName>Baja California</fullName>
                </value>
                <value>
                    <fullName>Baja California S</fullName>
                </value>
                <value>
                    <fullName>Bali</fullName>
                </value>
                <value>
                    <fullName>Banten</fullName>
                </value>
                <value>
                    <fullName>Ba Ria Vung Tau</fullName>
                </value>
                <value>
                    <fullName>Beijing City</fullName>
                </value>
                <value>
                    <fullName>Bengkulu</fullName>
                </value>
                <value>
                    <fullName>Ben Tre</fullName>
                </value>
                <value>
                    <fullName>Bihar</fullName>
                </value>
                <value>
                    <fullName>Binh Dinh</fullName>
                </value>
                <value>
                    <fullName>Binh Duong</fullName>
                </value>
                <value>
                    <fullName>Binh Phuoc</fullName>
                </value>
                <value>
                    <fullName>Binh Thuan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GCM_Street_1__c</fullName>
        <label>GCM Street 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCM_Street_2__c</fullName>
        <description>Address - Street Line2</description>
        <inlineHelpText>Address - Street Line2</inlineHelpText>
        <label>GCM Street 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCM_Street_3__c</fullName>
        <description>Street Line 3</description>
        <inlineHelpText>Street Line 3</inlineHelpText>
        <label>GCM Street 3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCM_Zip__c</fullName>
        <description>ZIP</description>
        <inlineHelpText>ZIP</inlineHelpText>
        <label>GCM Zip</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MN_Address_Line_1__c</fullName>
        <label>MN Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MN_Address_Line_2__c</fullName>
        <label>MN Address Line 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MN_Address_Line_3__c</fullName>
        <label>MN Address Line 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MN_City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>MN City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MN_Corporate_Id_OID__c</fullName>
        <label>MN Corporate Id OID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MN_Country__c</fullName>
        <label>MN Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MN_Customer_Name__c</fullName>
        <description>Short Name of the Customer</description>
        <inlineHelpText>Short Name of the Customer</inlineHelpText>
        <label>MN Customer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MN_Industry_Segment__c</fullName>
        <label>MN Industry Segment</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MN_Role__c</fullName>
        <label>MN Role</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MN_State__c</fullName>
        <label>MN State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MN_Zip__c</fullName>
        <label>MN Zip</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NXP_Global_Id__c</fullName>
        <formula>Customer_GID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NXP Global Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending for Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MN Corp Id Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MN_City__c</columns>
        <columns>Corp_Id__c</columns>
        <columns>MN_Corporate_Id_OID__c</columns>
        <columns>Customer_GID__c</columns>
        <columns>Customer_OID__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Corp_ID_Pending_CMD_Officer_Review</fullName>
        <columns>NAME</columns>
        <columns>Corp_Id__c</columns>
        <columns>GCM_Legal_Name__c</columns>
        <columns>GCM_Street_1__c</columns>
        <columns>DUNS__c</columns>
        <columns>Customer_GID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending for Approval</value>
        </filters>
        <label>Corp ID Pending CMD Officer Review</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Corp_ID_Pending_MN_Officer_Review</fullName>
        <columns>NAME</columns>
        <columns>Corp_Id__c</columns>
        <columns>Customer_OID__c</columns>
        <columns>MN_Customer_Name__c</columns>
        <columns>Customer_GID__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Created</value>
        </filters>
        <label>Corp ID Pending MN Officer Review</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CIR-{0000}</displayFormat>
        <label>MN Corp Id Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MN Corp Id Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Completed_Record_cant_be_Updated</fullName>
        <active>true</active>
        <description>All the request record with Status &apos;Completed&apos; already cant be updated.</description>
        <errorConditionFormula>IF( TEXT(PRIORVALUE(Status__c))  =  &apos;Completed&apos;, true, false)</errorConditionFormula>
        <errorMessage>This request is already completed and cant be updated now.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Corp_Id_is_Required</fullName>
        <active>true</active>
        <description>Corp Id is required</description>
        <errorConditionFormula>ISBLANK( Corp_Id__c )</errorConditionFormula>
        <errorDisplayField>Corp_Id__c</errorDisplayField>
        <errorMessage>Corp Id is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GID_required</fullName>
        <active>true</active>
        <description>Customer GID required when status is completed</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c,&quot;Completed&quot;),Customer_GID__c ==null)</errorConditionFormula>
        <errorDisplayField>Customer_GID__c</errorDisplayField>
        <errorMessage>Please enter the Customer GID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MN_Corp_Id_OID_is_Required</fullName>
        <active>true</active>
        <description>MN Corp Id OID is required</description>
        <errorConditionFormula>ISBLANK(  MN_Corporate_Id_OID__c  )</errorConditionFormula>
        <errorDisplayField>MN_Corporate_Id_OID__c</errorDisplayField>
        <errorMessage>MN Corp Id OID is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_Mandatory_for_Brazil</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
( 
OR( 
AND( 
ISPICKVAL( GCM_Country__c , &quot;Brazil&quot;) , 
ISPICKVAL( GCM_State_Province__c , &quot;&quot;) 
), 
AND( 
MN_Country__c = &quot;Brazil&quot; , 
ISBLANK( MN_State__c ) 
) 
), 
OR( 
CreatedDate &gt;= DATETIMEVALUE(&quot;2014-10-22 06:00:00&quot;), 
ISBLANK(CreatedDate ) 
) 
)</errorConditionFormula>
        <errorMessage>A state / province is mandatory when country is Brazil</errorMessage>
    </validationRules>
</CustomObject>